Adicionar página inicial de projetos com layout, detalhes do projeto e fundo estrelado.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#hero">Início</a></li>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#skills">Habilidades</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
                 <li><a href="curriculo.html">Currículo</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
@@ -110,10 +111,10 @@
 
             <div class="skill-card fade-in">
                 <div class="skill-icon">
-                    <i class="fab fa-react"></i>
+                    <i class="fab fa-node-js"></i>
                 </div>
-                <h3 class="skill-name">Next.js</h3>
-                <p>Framework React para aplicações web modernas.</p>
+                <h3 class="skill-name">Node.js</h3>
+                <p>Ambiente de execução JavaScript no servidor.</p>
             </div>
 
             <div class="skill-card fade-in">
@@ -234,6 +235,7 @@
                         <li><a href="#hero">Início</a></li>
                         <li><a href="#about">Sobre</a></li>
                         <li><a href="#skills">Habilidades</a></li>
+                        <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="curriculo.html">Currículo</a></li>
                         <li><a href="#contact">Contato</a></li>
                     </ul>
