--- a/contato.html
+++ b/contato.html
@@ -18,6 +18,7 @@
                 <li><a href="index.html#hero">Início</a></li>
                 <li><a href="index.html#about">Sobre</a></li>
                 <li><a href="index.html#skills">Habilidades</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
                 <li><a href="curriculo.html">Currículo</a></li>
                 <li><a href="#contact" class="active">Contato</a></li>
             </ul>
@@ -123,6 +124,7 @@
                         <li><a href="index.html#hero">Início</a></li>
                         <li><a href="index.html#about">Sobre</a></li>
                         <li><a href="index.html#skills">Habilidades</a></li>
+                        <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="curriculo.html">Currículo</a></li>
                         <li><a href="#contact">Contato</a></li>
                     </ul>
