--- a/curriculo.html
+++ b/curriculo.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html#hero">Início</a></li>
                 <li><a href="index.html#about">Sobre</a></li>
                 <li><a href="especialidades.html">Habilidades</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
                 <li><a href="curriculo.html" class="active">Currículo</a></li>
                 <li><a href="index.html#contact">Contato</a></li>
             </ul>
@@ -179,6 +180,7 @@
                         <li><a href="index.html#hero">Início</a></li>
                         <li><a href="index.html#about">Sobre</a></li>
                         <li><a href="especialidades.html">Habilidades</a></li>
+                        <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="curriculo.html">Currículo</a></li>
                         <li><a href="index.html#contact">Contato</a></li>
                     </ul>
